Endlich eine Lösung für Choices

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/planungUebersicht.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/planungUebersicht.html.twig
@@ -22,7 +22,7 @@
             <tbody>
             {% for planung in planungen %}
                 <tr>
-                    <td><a href="">{{planung.getName()}}</a></td>
+                    <td><a href="{{ path('modulBearbeiten', {'id': planung.getModulID()}) }}">{{planung.getName()}}</a></td>
                     <td>{{planung.getErstellungsdatum()|date('d.m.Y')}}</td>
                     <td><a href="">freigeben</a></td>
                     {# <td><a href="{{ '/restricted/dozent/planungLoeschen/'~planung.getModulID() }}"></a></td> #}
