--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/modulbearbeiten.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/modulbearbeiten.html.twig
@@ -15,25 +15,24 @@
     <div class="table-responsive">
         {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
         <table class="table table-bordered">
-           {# {{ form_row(form.status) }}#}
-            {{ form_row(form.leistungspunkte) }}
-            {{ form_row(form.kuerzel) }}
             {{ form_row(form.name) }}
             {{ form_row(form.nameEN) }}
+            {{ form_row(form.kuerzel) }}
             {{ form_row(form.haeufigkeit) }}
             {{ form_row(form.dauer) }}
-            {#{{ form_row(form.lehrveranstaltungen) }}#}
+            {{ form_row(form.leistungspunkte) }}
             {{ form_row(form.kontaktzeitVL) }}
             {{ form_row(form.kontaktzeitSonstige) }}
             {{ form_row(form.selbststudium) }}
             {{ form_row(form.gruppengroesse) }}
             {{ form_row(form.lernergebnisse) }}
             {{ form_row(form.inhalte) }}
-            {#{{ form_row(form.pruefungsformen) }}#}
             {{ form_row(form.sprache) }}
             {{ form_row(form.literatur) }}
-            {#{{ form_row(form.voraussetzungLP) }}#}
             {{ form_row(form.voraussetzungInh) }}
+            {{ form_row(form.lehrveranstaltungen) }}
+            {{ form_row(form.pruefungsformen) }}
+            {{ form_row(form.voraussetzungLP) }}
         </table>
         {{ form_end(form) }}
     </div>
