PDF Export => Unterscheidung Semester/Wochen

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/PDF-Test/modulhandbuch.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/PDF-Test/modulhandbuch.html.twig
@@ -44,7 +44,12 @@
                     </td>
                     <td>
                         <div class="key">Dauer</div>
-                        {{ modul.getDauer()}} Semester!
+                        {{ modul.getDauer()}}
+                        {% if modul.getDauer() < 3 %}
+                            Semester
+                        {% else %}
+                            Wochen
+                        {% endif %}
                     </td>
                     <td>
 
