--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/planungUebersicht.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Veranstaltung/planungUebersicht.html.twig
@@ -22,10 +22,9 @@
             <tbody>
             {% for planung in planungen %}
                 <tr>
-                    <td><a href="{{ path('modulBearbeiten', {'id': planung.getModulID()}) }}">{{planung.getName()}}</a></td>
+                    <td><a href="{{ path('planungBearbeiten', {'id': planung.getModulID()}) }}">{{planung.getName()}}</a></td>
                     <td>{{planung.getErstellungsdatum()|date('d.m.Y')}}</td>
                     <td><a href="">freigeben</a></td>
-                    {# <td><a href="{{ '/restricted/dozent/planungLoeschen/'~planung.getModulID() }}"></a></td> #}
                     <td><a href="{{ path('planungLoeschen', {'id': planung.getModulID()}) }}">löschen</a></td>
                 </tr>
             {% endfor %}
